<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:id="@+id/ll_item"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_krizh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/krizh_st"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name_st"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/company_name"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_sender_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sender_city"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_sender_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sender_address"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_sender_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sender_phone"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_receiver_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/receiver_city_st"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_receiver_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/receiver_address_st"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_receiver_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/receiver_phone_st"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_seat_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seat_count_st"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_waybill_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/waybill_number"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cost"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_st"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_weight_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_type_st"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_send_waybill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_send_waybill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_done" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>