<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.stockman.StockManActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/spinner_border_red"
        android:padding="15dp">

        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_item"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_krizh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/krizh_st"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_name_st"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_sender_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sender_city"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_sender_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sender_address"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_sender_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sender_phone"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_receiver_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receiver_city_st"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_receiver_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receiver_address_st"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_receiver_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receiver_phone_st"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_seat_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seat_count_st"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_waybill_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/waybill_number"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cost"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight_st"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_weight_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight_type_st"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Отправить накладной"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" />

</LinearLayout>